# context-first-docs

./: .dockerignore  .eslintrc.cjs  .gitignore  CONTEXT.md  CONTRIBUTING.md  CURSOR_GIT_SETUP.md  DECISIONS.md  Dockerfile.playground  GITHUB_SETUP.md  GIT_SETUP_COMPLETE.md  INSTALL_NODEJS.md  PLAN.md  PROJECT-STRUCTURE.md  PROJECT_ANALYSIS.md  PUBLISH.md  PUBLISH_NOW.md  PUSH_TO_GITHUB.md  QUESTIONS.md  QUICK_PUBLISH.md  README.md  RISKS.md  context-first-docs.code-workspace  docker-compose.yml  entrypoint-playground.sh  fix-cursor-git-path.ps1  init-and-push.ps1  jest.config.js  package-lock.json  package.json  publish.ps1  setup-and-publish.ps1
.context/: .gitkeep  README.md
.cursor/: mcp.json
.github/workflows/: ci.yml  deploy-playground-azure.yml
docs/: AGENT_API.md  ARCHITECTURE.md  CHANGE_DETECTION.md  COLLABORATOR_GUIDE.md  CONFLICT_AND_MERGE_SCENARIO.md  CONTEXTUALIZED_AI_MODEL.md  CUSTOMER_OVERVIEW.md  DEVELOPMENT_DEPLOY_AZURE.md  DOCS_ANALYSIS.md  DOCX_REVIEW_INTEGRATION.md  HELLO_WORLD_SCENARIO.md  INVESTOR_BRIEF.md  OTEL_LOGGING.md  README.md  RECONCILIATION_STRATEGIES.md  REVIEW_MODE.md  SELF-REFERENCE.md  STORAGE_ARCHITECTURE.md  STORAGE_IMPLEMENTATION_PLAN.md  STORAGE_OPTIONS.md  UI_SPEC.md  USAGE.md  WHITEPAPER.md  WHITEPAPER_APPENDIX.md
docs/appendix/: CHANGE_DETECTION.md  CONTEXTUALIZED_AI_MODEL.md  DOCX_REVIEW_INTEGRATION.md  OPTIONAL_INTEGRATIONS.md  RECONCILIATION_STRATEGIES.md  SELF-REFERENCE.md
docs/core/: AGENT_API.md  ARCHITECTURE.md  REVIEW_MODE.md  UI_SPEC.md  USAGE.md
docs/engineering/storage/: STORAGE_ARCHITECTURE.md  STORAGE_IMPLEMENTATION_PLAN.md
docs/engineering/ui/: EXTENSION_ARCHITECTURE.md  SERVER_API_REQUIREMENTS.md  UI_ENGINEERING_PLAN.md
docs/maintainer/: DOCS_ANALYSIS.md  DOCS_CONSISTENCY_AND_GAPS_ANALYSIS.md  README.md
docs/reference/: DATA_MODEL_REFERENCE.md  OPERATIONS.md  PRIVACY_AND_DATA_PROTECTION.md  SECURITY_GOVERNANCE.md
docs/scenarios/: BUSINESS_POLICY_SCENARIO.md  CONFLICT_AND_MERGE_SCENARIO.md  HELLO_WORLD_SCENARIO.md
examples/: README.md
examples/example-project/: CONTEXT.md  DECISIONS.md
scripts/: README.md  _inspect-docx.js  build-whitepaper-docx.js  install-ctx-extension.js  install.js  install.ps1  install.sh  render-markdown-with-ctx.js  run-integration-with-server.mjs  set-github-azure-secrets.ps1  set-github-azure-secrets.sh  test-server-api.mjs
server/: .dockerignore  Cargo.toml  Dockerfile  README.md  policies.json  retention.json
server/src/: auth.rs  config.rs  events.rs  h3_server.rs  lib.rs  main.rs  policy.rs  rbac.rs  retention.rs  sensitivity.rs  telemetry.rs  tls.rs
server/src/api/: routes.rs
server/src/store/: context_store.rs  file_store.rs  in_memory.rs  mod.rs
server/src/types/: audit.rs  conflicts.rs  mod.rs  node.rs  proposal.rs  query.rs
src/: api-client.ts  index.ts  telemetry.ts
src/markdown/: ctx-block.ts  ctx-render-plugin.ts  index.ts  projection.ts
src/playground/: guided.ts  readme.ts  scenarios.ts  server.ts
src/store/: in-memory-store.ts  index.ts  preview-store.ts
src/store/core/: apply-proposal.ts  conflicts.ts  graph.ts  index.ts  node-key.ts  (+2 more)
src/types/: actions.ts  audit.ts  conflicts.ts  context-store.ts  governance.ts  index.ts  issues.ts  markdown-it.d.ts  node.ts  proposal.ts  roles.ts
src/utils/: node-text.ts  type-guards.ts
tests/: api-client-metrics.test.ts  api-client.integration.test.ts  api-client.test.ts  ctx-block.edge-cases.test.ts  ctx-block.test.ts  in-memory-store.coverage.test.ts  in-memory-store.test.ts  store-core.coverage.test.ts  telemetry.test.ts  type-guards.test.ts
vscode-ctx-markdown/: README.md  extension.js  package.json  style.css
