[package]
name = "truthlayer-server"
version = "0.1.0"
edition = "2021"
description = "TruthLayer server - server-centric config, storage, RBAC"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
# OpenTelemetry: correlated tracing (client → server)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-client"] }
opentelemetry-stdout = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tracing-opentelemetry = "0.26"
tower = { version = "0.4", features = ["util"] }
base64 = "0.22"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
http-body-util = "0.1"
http = "1"
