[package]
name = "truthlayer-server"
version = "0.1.0"
edition = "2021"
description = "TruthLayer server - server-centric config, storage, RBAC, HTTP/3 transport"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
# OpenTelemetry: correlated tracing (client → server)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-client"] }
opentelemetry-stdout = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tracing-opentelemetry = "0.26"
tower = { version = "0.4", features = ["util"] }
base64 = "0.22"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
# HTTP/3 (QUIC) transport — decision-038
quinn = "0.11"
h3 = "0.0"
h3-quinn = "0.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
# Body bridging (h3 ↔ axum)
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
# SSE events streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

[dev-dependencies]
